prevent bound break in all circumstances on terms statement

--- a/my-app/src/components/Terms.css
+++ b/my-app/src/components/Terms.css
@@ -9,5 +9,5 @@
 
 .terms-container{
 padding-left: 98px;
-padding-top: 650px;
+padding-top: 80vh;
 }
